--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ license = {text = "BSD License"}
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "torch (>=2.6.0,<3.0.0)",
     "numpy (>=2.2.3,<3.0.0)",
     "scipy (>=1.15.2,<2.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "faiss-cpu (>=1.10.0,<2.0.0)",
+    "torch (>=2.6.0,<3.0.0)",
 ]
 
 
@@ -21,17 +21,18 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[[tool.poetry.source]]
-name = "torch_cuda124"
-url = "https://download.pytorch.org/whl/cu124"
-priority = "supplemental"
-
 
 [tool.poetry.dependencies]
-torch = {source = "torch_cuda124"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.9"
+ipykernel = "^6.29.5"
+jupyter = "^1.1.1"
+
+
+[tool.poetry.group.examples.dependencies]
+scikit-learn = "^1.6.1"
+matplotlib = "^3.10.1"
 
 [tool.ruff]
 target-version = "py310"
@@ -41,7 +42,7 @@ line-length = 120
 select = ["ALL"]
 
 [tool.ruff.lint.pycodestyle]
-max-doc-length = 80
+max-doc-length = 90
 
 [tool.ruff.lint.per-file-ignores]
 "test/*" = ["S101", "D100", "D103", "D104"]
